Update image paths to assets folders

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         </div>
 
         <aside class="hero-photo">
-          <!-- Using user's uploaded JPG in project root if present; fallback to svg in assets -->
+          <!-- Using user's uploaded JPG in assets/fotos-pessoais -->
           <picture>
-            <source srcset="minhafotoprofissional.JPG" type="image/jpeg">
+            <source srcset="assets/fotos-pessoais/minhafoto-profissional.JPG" type="image/jpeg">
             <img src="assets/minhafotoprofissional.svg" alt="Foto profissional de Giovana Alves" loading="lazy" />
           </picture>
         </aside>
@@ -82,9 +82,9 @@
 
         <div class="sobre-aside">
           <div class="logo-grid">
-            <img class="logo-img" src="simbolo%20logo.png" alt="Logo 1" onerror="this.onerror=null;this.src='assets/logo-1.svg'" loading="lazy"/>
-            <img class="logo-img" src="simbolo%20mais%20tipografia.png" alt="Logo 2" onerror="this.onerror=null;this.src='assets/logo-2.svg'" loading="lazy"/>
-            <img class="logo-img" src="simbolo%20mais%20tipografia%20logo%20arredondada.png" alt="Logo 3" onerror="this.onerror=null;this.src='assets/logo-3.svg'" loading="lazy"/>
+            <img class="logo-img" src="assets/logos/simbolo-logo.png" alt="Logo 1" onerror="this.onerror=null;this.src='assets/logo-1.svg'" loading="lazy"/>
+            <img class="logo-img" src="assets/logos/simbolo-mais-tipografia.png" alt="Logo 2" onerror="this.onerror=null;this.src='assets/logo-2.svg'" loading="lazy"/>
+            <img class="logo-img" src="assets/logos/simbolo-mais-tipografia-arredondada.png" alt="Logo 3" onerror="this.onerror=null;this.src='assets/logo-3.svg'" loading="lazy"/>
           </div>
 
           <div class="contact-card">
